# ml-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  TICKETS.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
airflow/dags/: drift_monitor_dag.py  feature_pipeline_dag.py  llm_eval_dag.py  training_pipeline_dag.py
data/: generate_synthetic.py
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: feature_windows.sql
dbt/models/staging/: schema.yml  sources.yml  stg_audit_events.sql  stg_devices.sql  stg_fraud_cases.sql  stg_fraud_labels.sql  stg_merchants.sql  stg_model_versions.sql  stg_risk_scores.sql  stg_transactions.sql  stg_users.sql
dbt/seeds/: country_risk.csv  mcc_codes.csv
dbt/tests/: assert_no_duplicate_features.sql  assert_no_label_leakage.sql  assert_positive_amounts.sql
docs/: ARCHITECTURE.md  EVALUATION.md  ML-SERVICE-ROADMAP.md  MODEL_CARD.md  PROMPTS.md  TICKETS.md
docs/ADR/: 001-llm-provider-abstraction.md  002-dbt-dual-target.md  003-mock-first-eval.md
eval/: gate.py  report.py  runner.py
eval/baselines/: current.json
eval/datasets/: golden_cases.jsonl
eval/judges/: llm_judge.py
eval/metrics/: deterministic.py
eval/safety/: red_team.py
prompts/: registry.py
prompts/explanation/: v1.meta.json  v1.system.md  v1.user.md
prompts/investigation/: v1.meta.json  v1.system.md  v1.user.md
prompts/judges/: disposition.system.md  disposition.user.md  groundedness.system.md  groundedness.user.md  hallucination.system.md  hallucination.user.md
scripts/: demo.sh
src/ml_service/agent/: case_integration.py  (+3 more)
tests/: test_case_integration.py  test_contract.py  test_drift.py  test_eval.py  test_events.py  test_explain.py  test_feedback.py  test_orchestration.py  test_predict.py  test_retraining.py  test_safety.py  test_serving.py  test_shadow.py  test_training.py  test_transforms.py
(+47 files in other folders)
