[project]
name = "ml-service"
version = "0.1.0"
description = "AI/ML plane for the Fraud Prevention Platform — inference, training, drift, agentic investigation, and evaluation."
readme = "README.md"
license = { text = "Proprietary — BragDev LLC" }
requires-python = ">=3.12"
authors = [{ name = "Bruno Braga", email = "bruno@bragdev.com" }]

dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "structlog==24.4.0",
    "prometheus-client==0.21.1",
    "httpx==0.28.1",
    "xgboost==2.1.3",
    "scikit-learn==1.6.1",
    "pandas==2.2.3",
    "numpy==2.2.1",
    "mlflow==2.19.0",
    "shap==0.46.0",
    "optuna==4.1.0",
    "anthropic==0.42.0",
    "jinja2==3.1.5",
    "duckdb==1.1.3",
    "redis==5.2.1",
    "psycopg2-binary==2.9.10",
    "sqlalchemy==2.0.36",
]

[project.optional-dependencies]
dbt = [
    "dbt-core==1.9.1",
    "dbt-duckdb==1.9.1",
    "dbt-postgres==1.9.0",
]
airflow = [
    "apache-airflow==2.10.4",
]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "ruff==0.8.6",
    "mypy==1.14.1",
    "pre-commit==4.0.1",
    "httpx==0.28.1",
]
all = ["ml-service[dbt,airflow,dev]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_service"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
